# frametimer

./: README.md  setup.cfg
frametimer/: __init__.py  frametimer.py
src/frametimer/: __init__.py  frametimer.py
test/: measure_accuracy.py  usage.py
