[metadata]
name = frametimer
version = attr: frametimer.__version__
url = https://github.com/aib/frametimer
author = aib
author_email = aibok42@gmail.com
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
description = An accurate clock/timer for obtaining constant framerates (FPS)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = clock, timer, framerate, fps

[options]
packages = frametimer
python_requires = >=3.3
